fixed mobile image overflow

--- a/src/screens/Portfolio/Portfolio.scss
+++ b/src/screens/Portfolio/Portfolio.scss
@@ -50,6 +50,7 @@
       }
 
       @media (max-width: 490px) {
+        display: none;
         width: 250px;
         display: flex;
         justify-content: center;
